@@ -17,7 +17,7 @@ package com.vaadin.flow.server.frontend;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -27,7 +27,6 @@ import java.util.regex.MatchResult;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import tools.jackson.databind.JsonNode;
@@ -112,8 +111,8 @@ public class CssBundler {
 
     private static String inlineImports(File themeFolder, File cssFile,
             Set<String> assetAliases) throws IOException {
-        String content = FileUtils.readFileToString(cssFile,
-                StandardCharsets.UTF_8);
+
+        String content = Files.readString(cssFile.toPath());
 
         Matcher urlMatcher = urlPattern.matcher(content);
         content = urlMatcher.replaceAll(result -> {
